--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,13 @@ a {
 
 html,
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
   width: 100%;
   font-size: 100%;
@@ -91,6 +98,12 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+}
+
+main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .lock {
@@ -117,24 +130,28 @@ body {
   .touch .header__container .menu .menu__list {
     display: block;
     max-width: 100%;
-    margin: 100px 0px 0px 30px;
+    margin: 100px 10px 0px 10px;
+  }
+  .touch .header__container .menu .menu__item {
+    padding: 5px 0px 5px 0px;
   }
   .touch .header__container .menu .menu__item:not(:last-child) {
     margin-right: 0;
   }
   .touch .header__container .menu .menu__block__icon {
-    top: 8px;
+    top: 10px;
   }
   .touch .header__container .menu .menu__link {
     font-family: Lato;
     font-weight: 500;
     font-size: 1.25rem;
-    line-height: 130%;
+    line-height: 100%;
     color: #292929;
   }
   .touch .header__container .menu .sub__menu__list {
     position: relative;
     width: 100%;
+    padding-right: 10px;
   }
   .touch .header__container .menu .sub__menu__item {
     position: relative;
@@ -142,13 +159,13 @@ body {
   }
   .touch .header__container .menu .sub__menu__item .sub__menu__link {
     font-size: 1.25rem;
-    font-weight: 400;
+    font-weight: 500;
     font-family: Lato;
+    line-height: 100%;
   }
   .touch .header__container .menu .sub__sub__menu__list {
     display: none;
     width: 100%;
-    background-color: #cdcccc;
     border-radius: 4px;
     position: relative;
     top: 50%;
@@ -159,8 +176,9 @@ body {
   }
   .touch .header__container .menu .sub__sub__menu__item .sub__sub__menu__link {
     font-size: 1.25rem;
-    font-weight: 400;
+    font-weight: 500;
     font-family: Lato;
+    line-height: 100%;
   }
   .touch .header__container .menu::before {
     content: "";
@@ -238,6 +256,26 @@ body {
             transform: rotate(135deg);
   }
 }
+@media (max-width: 450px) {
+  .touch .header__container .button .link {
+    padding-right: 10px;
+  }
+}
+@media (max-width: 350px) {
+  .touch .header__container .button .link {
+    display: none;
+  }
+}
+@media (max-width: 450px) {
+  .touch .header__container .button .button__link a {
+    padding: 16px 8px;
+  }
+}
+@media (max-width: 350px) {
+  .touch .header__container .button .button__link a {
+    display: none;
+  }
+}
 .touch .menu .menu__list .menu__item .sub__menu__active {
   display: block;
 }
@@ -245,8 +283,36 @@ body {
 .desktop .menu__item:hover .sub__menu__list {
   display: block;
 }
+.desktop .menu__item:hover .menu__link:hover {
+  text-decoration: underline;
+  color: #01996d;
+}
 .desktop .sub__menu__item:hover .sub__sub__menu__list {
   display: block;
+}
+.desktop .button .button__link a {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.desktop .button .button__link a:hover {
+  background: #1c755b;
+}
+.desktop .button .link {
+  -webkit-transition: all 0.15s ease 0s;
+  -o-transition: all 0.15s ease 0s;
+  transition: all 0.15s ease 0s;
+}
+.desktop .button .link:hover {
+  color: #01996d;
+}
+.desktop ._button {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.desktop ._button:hover {
+  background: #1c755b;
 }
 
 .icon__active {
@@ -256,7 +322,7 @@ body {
 }
 
 ._container {
-  max-width: 1180px;
+  max-width: 1370px;
   margin: 0 auto;
   padding: 0px 10px 0px 10px;
 }
@@ -266,6 +332,12 @@ body {
   width: 100%;
   border-bottom: 1px solid #c5bebe;
   z-index: 50;
+  background-color: #fff;
+}
+@media (max-width: 768px) {
+  .header {
+    border-bottom: 0px solid #c5bebe;
+  }
 }
 
 .header__container {
@@ -321,10 +393,6 @@ body {
     font-size: 1em;
   }
 }
-.header__container .menu .menu__link:hover {
-  text-decoration: underline;
-  color: #01996d;
-}
 .header__container .menu .menu__block__icon {
   top: 33%;
 }
@@ -336,7 +404,7 @@ body {
 .header__container .menu .sub__menu__list {
   display: none;
   width: 120px;
-  background-color: #e8e7e7;
+  background-color: #f3f3f3;
   border-radius: 4px;
   position: absolute;
   top: 100%;
@@ -348,18 +416,19 @@ body {
 }
 .header__container .menu .sub__menu__item .sub__menu__link {
   font-size: 1.25rem;
-  font-weight: 400;
+  font-weight: 500;
   font-family: Lato;
 }
 @media (max-width: 992px) {
   .header__container .menu .sub__menu__item .sub__menu__link {
+    line-height: 0%;
     font-size: 1em;
   }
 }
 .header__container .menu .sub__sub__menu__list {
   display: none;
   width: 120px;
-  background-color: #e8e7e7;
+  background-color: #e1e1e1;
   border-radius: 4px;
   position: absolute;
   top: 50%;
@@ -371,11 +440,12 @@ body {
 }
 .header__container .menu .sub__sub__menu__item .sub__sub__menu__link {
   font-size: 1.25rem;
-  font-weight: 400;
+  font-weight: 500;
   font-family: Lato;
 }
 @media (max-width: 992px) {
   .header__container .menu .sub__sub__menu__item .sub__sub__menu__link {
+    line-height: 0%;
     font-size: 1em;
   }
 }
@@ -394,23 +464,12 @@ body {
   line-height: 130%;
   color: #000;
   padding-right: 35px;
-  -webkit-transition: all 0.15s ease 0s;
-  -o-transition: all 0.15s ease 0s;
-  transition: all 0.15s ease 0s;
 }
 @media (max-width: 992px) {
   .header__container .button .link {
     font-size: 1em;
     padding-right: 20px;
   }
-}
-@media (max-width: 576px) {
-  .header__container .button .link {
-    display: none;
-  }
-}
-.header__container .button .link:hover {
-  color: #01996d;
 }
 .header__container .button .button__link a {
   font-family: Lato;
@@ -424,9 +483,6 @@ body {
   border-radius: 4px;
   padding: 20px 50px;
   color: #fff;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
 }
 @media (max-width: 992px) {
   .header__container .button .button__link a {
@@ -434,15 +490,198 @@ body {
     font-size: 1em;
   }
 }
-@media (max-width: 576px) {
-  .header__container .button .button__link a {
-    display: none;
-  }
-}
-.header__container .button .button__link a:hover {
-  background: #1c755b;
-}
 
 .alivio {
   padding-top: 86px;
+}
+@media (max-width: 992px) {
+  .alivio {
+    padding-top: 66px;
+  }
+}
+@media (max-width: 768px) {
+  .alivio {
+    padding-top: 66px;
+  }
+}
+.alivio .alivio__img {
+  width: 100%;
+}
+
+._text__alivio {
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 155%;
+  color: #484848;
+}
+
+._button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #01996d;
+  border-radius: 4px;
+}
+._button ._link__button {
+  padding: 20px 50px;
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 125%;
+  color: #fff;
+}
+
+.alivio__wrap .alivio__container {
+  position: absolute;
+  top: 30%;
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__container {
+    top: 20%;
+  }
+}
+@media (max-width: 768px) {
+  .alivio__wrap .alivio__container {
+    position: inherit;
+    top: 0;
+  }
+}
+.alivio__wrap .alivio__title {
+  font-family: Lato;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 113%;
+  color: #01996d;
+  max-width: 285px;
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__title {
+    font-size: 2.2rem;
+  }
+}
+@media (max-width: 768px) {
+  .alivio__wrap .alivio__title {
+    max-width: 100%;
+    text-align: center;
+    padding-top: 20px;
+  }
+}
+.alivio__wrap .alivio__title:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__title:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+.alivio__wrap .alivio__text {
+  max-width: 420px;
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__text {
+    max-width: 330px;
+  }
+}
+@media (max-width: 768px) {
+  .alivio__wrap .alivio__text {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+.alivio__wrap .alivio__text:not(:last-child) {
+  margin-bottom: 30px;
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__text:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 768px) {
+  .alivio__wrap .alivio__button {
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media (max-width: 992px) {
+  .alivio__wrap .alivio__button .button__link {
+    padding: 15px 20px;
+  }
+}
+@media (max-width: 768px) {
+  .alivio__wrap .alivio__button .button__link {
+    width: 100%;
+    padding: 8px 20px;
+    text-align: center;
+  }
+}
+
+.footer {
+  background-color: #245852;
+  padding: 95px 0px 95px 0px;
+}
+@media (max-width: 992px) {
+  .footer {
+    padding: 80px 0px 80px 0px;
+  }
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 768px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.footer__container .footer__column:not(:last-child) {
+  margin-right: 150px;
+}
+@media (max-width: 768px) {
+  .footer__container .footer__column:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+}
+.footer__container .footer__column .footer__title {
+  font-family: Lato;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 137%;
+  color: #fff;
+}
+@media (max-width: 992px) {
+  .footer__container .footer__column .footer__title {
+    font-size: 1.5em;
+  }
+}
+.footer__container .footer__column .footer__title:not(:last-child) {
+  margin-bottom: 30px;
+}
+.footer__container .footer__column .footer__sub-title {
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 120%;
+  color: #fff;
+}
+@media (max-width: 992px) {
+  .footer__container .footer__column .footer__sub-title {
+    font-size: 1em;
+  }
+}
+.footer__container .footer__column .footer__sub-title:not(:last-child) {
+  margin-bottom: 30px;
 }
